# opencmdb

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  index.html  renovate.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
_bmad-output/implementation-artifacts/: 1-1-dependency-frontier-gate.md  1-2-fixture-manifest-sha256-gate.md  1-3-ddl-collation-prove-to-red.md  1-4-ci-runner-thin-yaml.md  1-5-mariadb-service-and-cargo-deny.md  1-6-pinned-toolchain-and-renovate.md  2-1-domain-observation-types.md  2-2-connector-error-taxonomy.md  2-3-connector-trait.md  2-4-minimal-in-memory-connector.md  2-5-connector-contract-test.md  3-1-binary-bootstrap-healthz.md  3-10-release-0-1-0.md  3-2-mariadb-pool-first-migration.md  3-3-repository-skeleton-two-traits.md  3-4-clock-port.md  3-5-arp-ping-connector.md  3-6-first-real-gap.md  3-7-one-page-shows-the-gap.md  3-8-transversal-anchors.md  3-9-packaging.md  4-1-jsonl-observation-stream.md  4-10-trap-multi-nic.md  4-11-trap-shared-hardware-vm.md  4-12-trap-cloned-mac.md  4-13-trap-dhcp-churn.md  4-2-truth-labelling-format.md  4-3-manifest-lockfile-and-orphans.md  4-4-fixture-connector-replays-jsonl.md  4-5a-fixture-connector-replays-failures.md  4-5b-fixture-connector-replays-capability-changes.md  4-6a-scoring-algebra.md  4-6b-metrics-harness.md  4-6c-run-comparability.md  4-7a-trap-runner-asserts-the-rule.md  4-7b-trap-corpus-positive-and-negative.md  4-8-reality-debt-register.md  4-9-trap-randomized-mac.md  deferred-work.md  epic-3-retro-2026-07-20.md  (+1 more)
_bmad-output/planning-artifacts/: architecture-views.md  architecture.md  competitive-analysis.md  epics.md  prd.md  product-brief-opencmdb-distillate.md  product-brief-opencmdb.md  ux-design-specification.md
crates/opencmdb-bin/: Cargo.toml
crates/opencmdb-bin/assets/: app.css  app.js
crates/opencmdb-bin/locales/: app.yml
crates/opencmdb-bin/migrations/: 0001_initial.sql
crates/opencmdb-bin/src/: arp_ping.rs  auth.rs  dburl.rs  fixture_connector.rs  fixtures.rs  main.rs  metrics.rs  page.rs  repo.rs  trap_gate.rs
crates/opencmdb-bin/templates/: _gap_card.html  gap.html
crates/opencmdb-core/: Cargo.toml
crates/opencmdb-core/src/: clock.rs  lib.rs  score.rs  trap.rs
crates/opencmdb-core/src/connector/: mod.rs
crates/opencmdb-core/src/gap/: mod.rs
crates/opencmdb-core/src/observation/: mod.rs
crates/opencmdb-core/src/repo/: mod.rs
crates/opencmdb-core/src/testing/: mod.rs
docker/: .env.example  README.dockerhub.md  docker-compose.yml  seed-example.sql
docs/: brief-initial-bmad.md  project-context.md
docs/manuals/: .gitignore  Makefile  README.md
docs/manuals/admin-manual/: admin-manual.tex
docs/manuals/common/: opencmdb-manual.sty
docs/manuals/user-manual/: user-manual.tex
fixtures/: MANIFEST  MANIFEST.toml  README.md
fixtures/capture/: README.md
fixtures/scenario/: README.md
fixtures/scenario/replay/: capability-downgrade.jsonl  cloned-mac.jsonl  dhcp-churn.jsonl  example-traps.jsonl  minimal.jsonl  multi-nic.jsonl  partial-then-failed.jsonl  randomized-mac.jsonl  shared-hardware-vm.jsonl
fixtures/scenario/traps/: README.md  cloned-mac.toml  dhcp-churn.toml  example.toml  multi-nic.toml  randomized-mac.toml  shared-hardware-vm.toml
xtask/: Cargo.toml
xtask/src/: main.rs
