# opencmdb-bin — the composition root. Everything that touches the outside world:
# SQL, HTTP, HTML, files, the clock, secrets (D55). Depends on opencmdb-core; never
# the reverse.
[package]
name = "opencmdb-bin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "opencmdb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
argon2 = "0.5.3"
askama = "0.16.0"
axum = "0.8.9"
chacha20poly1305 = "0.11.0"
config = "0.15.25"
opencmdb-core.workspace = true
prometheus = "0.14.0"
rust-embed = "8.12.0"
rust-i18n = "4.2.1"
sqlx = { version = "=0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "mysql", "migrate", "macros"] }
tokio = { version = "1.53.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zeroize = "1.9.0"

[dev-dependencies]
# `ServiceExt::oneshot` to drive the axum router in tests without binding a socket.
tower = { version = "0.5.2", features = ["util"] }
