# opencmdb-bin — the composition root. Everything that touches the outside world:
# SQL, HTTP, HTML, files, the clock, secrets (D55). Depends on opencmdb-core; never
# the reverse.
[package]
name = "opencmdb-bin"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "opencmdb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
argon2 = "0.5.3"
askama = "0.16.0"
axum = "0.8.9"
chacha20poly1305 = "0.11.0"
# `SystemClock` reads the wall clock via std::time and converts with DateTime::from_timestamp.
# default-features = false keeps chrono's `clock` feature OFF workspace-wide — otherwise feature
# unification would re-enable it in opencmdb-core and the domain could call Utc::now() (D19).
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
config = "0.15.25"
# `StreamExt::buffered` — bounded-concurrency probing in the ping scan (issue #10). Already in
# the tree via sqlx/axum; taken as a direct dependency here, std-only.
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
percent-encoding = "2.3.2"
opencmdb-core.workspace = true
prometheus = "0.14.0"
rust-embed = "8.12.0"
rust-i18n = "4.2.1"
serde_json = "1.0.145"
sqlx = { version = "=0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "mysql", "migrate", "macros"] }
# Async ICMP. surge-ping defaults to a SOCK_DGRAM (unprivileged) socket — no NET_RAW where
# net.ipv4.ping_group_range permits; CAP_NET_RAW is the container fallback (Story 3.9).
surge-ping = "0.9"
tokio = { version = "1.53.0", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.44"
# Daily-rotating file logs (non-blocking), for on-NAS debugging alongside stdout.
tracing-appender = "0.2.3"
# Mint client-side obs_ids (UUIDv7 — sortable by creation time, D48).
uuid = { version = "1.24.0", features = ["v7"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zeroize = "1.9.0"

[dev-dependencies]
# `ServiceExt::oneshot` to drive the axum router in tests without binding a socket.
tower = { version = "0.5.2", features = ["util"] }
