# opencmdb-core — the domain. D47: an error here is DOMAIN DATA, not an `anyhow` string.
# BANNED here, by the dependency graph and enforced by an xtask grep (D47/D53/D55):
#   anyhow · axum · sqlx · askama. This crate cannot name what touches the outside world.
[package]
name = "opencmdb-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# default-features off drops chrono's `clock`/`wasmbind` (wasm-bindgen + windows-* cruft):
# this is a Linux NAS binary, and time is bound as a parameter from Rust, not read via
# chrono's Local (D10/D25). We keep only value types + serde.
chrono = { version = "0.4.45", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
# `CancellationToken` for the `Connector` trait's cooperative cancellation (D34). The only
# runtime primitive in the domain; allowed by the frontier gate (denylist = anyhow/axum/
# sqlx/askama). We do NOT depend on tokio itself in production — only this one type.
tokio-util = "0.7.16"
uuid = { version = "1.24.0", features = ["v7", "serde"] }

# Test-only (D47: dev-deps are outside the shipped binary and excluded from the frontier
# gate via `-e normal`): `serde_json` gives the serde round-trips a concrete format; `tokio`
# provides the `#[tokio::test]` runtime to await a poll.
[dev-dependencies]
serde_json = "1.0.145"
tokio = { version = "1.53.0", features = ["macros", "rt"] }
